# claude-skill-auditor

./: .gitignore  MANIFEST.in  README.md  README_en.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_zh.md
src/skill_auditor/: __init__.py  __main__.py  cli.py
src/skill_auditor/core/: __init__.py  audit_context.py  parser.py  skill.py
src/skill_auditor/reporters/: __init__.py
src/skill_auditor/rules/: __init__.py  engine.py
src/skill_auditor/rules/builtin/: commands.yaml  format_compliance.yaml  permissions.yaml  prompt_injection.yaml
tests/: conftest.py  test_parser.py  test_rule_engine.py
tests/fixtures/skills/malicious/: permission_abuse.md  prompt_injection.md
tests/fixtures/skills/safe/: basic_skill.md
